SUBDIRS = fpt mri nfct nfft nfsft nfsft nfst nnfft nsfft solver texture . 

noinst_LTLIBRARIES = libkernel.la      

libkernel_la_SOURCES =

libkernel_la_LIBADD =   fpt/libfpt.la		\
			mri/libmri.la		\
			nfct/libnfct.la		\
			nfft/libnfft.la		\
			nfsft/libnfsft.la	\
			nfsft/libnfsft.la	\
			nfst/libnfst.la		\
			nnfft/libnnfft.la	\
			nsfft/libnsfft.la	\
			solver/libsolver.la	\
			texture/libtexture.la	\